# algorithms_sedgewick

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp
src/ch1/: CMakeLists.txt
src/ch1/ch1/: ch1.cpp  ch1.hpp
tests/: CMakeLists.txt  main.test.cpp  queue_multiset_stack.test.cpp  temperature_reading.test.cpp
